Creating a partial service for Employee

--- a/Workers/Workers.Web/Workers.Web.csproj
+++ b/Workers/Workers.Web/Workers.Web.csproj
@@ -20,6 +20,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Workers.Application\Workers.Application.csproj" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="https://json.schemastore.org/band-manifest.json" /></VisualStudio></ProjectExtensions>
 
 </Project>
