--- a/Workers/Workers.Application/Workers.Application.csproj
+++ b/Workers/Workers.Application/Workers.Application.csproj
@@ -1,7 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Workers.Domain\Workers.Domain.csproj" />
+    <ProjectReference Include="..\Workers.Infrastructure.Data\Workers.Infrastructure.Data.csproj" />
+	  <PackageReference Include="Extensions.Password" Version="1.0.0" />
+  </ItemGroup>
 
 </Project>
